@@ -1,3 +1,11 @@
+Fri Jan  8 12:42:20 1999  Owen Taylor  <otaylor@redhat.com>
+
+	* gnome-stock.c (gnome_stock_paint): Don't create
+	  excess new masks. (Is this the last GNOME stock
+	  leak?)
+
+	* gnome-stock.c (lookup): Fix memory leak when lookup fails.
+
 Fri Jan 08 05:35:55 1999  George Lebl  <jirka@5z.com>
 
 	* gnome-stock.c: fix a memory leak when destroying the widget,
